--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Javascript exercise</h1>
-<script src="/assets/bundle.js"></script>
+    <h1>Javascript exercise</h1>
+    <div class="main-container">
+    </div>
+    <script src="/assets/bundle.js"></script>
 </body>
 </html>
