--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, shrink-to-fit=no" />
     <title>Document</title>
 </head>
 <body>
-    <h1>Javascript exercise</h1>
+    <h1>Multiply exercise</h1>
+    <h2>When you click any box then all the numbers which are a multiple of that number will be highlighted.</h2>
     <div class="main-container">
     </div>
     <script src="/assets/bundle.js"></script>
