Add tests for the helpers

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Multiply exercise</h1>
-    <h2>When you click any box then all the numbers which are a multiple of that number will be highlighted.</h2>
+    <h2>When you click any box then all the numbers which are multiples of that number will be highlighted in yellow.</h2>
     <div class="main-container">
     </div>
     <script src="/assets/bundle.js"></script>
